--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Reddit</a>
-  <a href="/posts/new" class="btn btn-primary navbar-btn">New Post</a>
-  <ul class="nav navbar-nav navbar-right">
-      <li><a href="/logout">Logout</a></li>
-      <li><a href="/login">Login</a></li>
-      <li><a href="/sign-up">Sign Up</a></li>
-    </ul>
-</nav>
+<ul class="nav navbar-nav navbar-right">
+  {{#if currentUser}}
+    <li><a href="/logout">Logout</a></li>
+    <a href="/posts/new" class="btn btn-primary navbar-btn">New Post</a>
+  {{else}}
+    <li><a href="/login">Login</a></li>
+    <li><a href="/sign-up">Sign Up</a></li>
+  {{/if}}
+</ul>
